@@ -111,7 +111,7 @@ proc qconf_add_rqs {} {
 
 proc qconf_modify_rqs {} {
    global ts_config env rqs_name_fast rqs_name_cli
-   global CHECK_OUTPUT CHECK_USER CHECK_FIRST_FOREIGN_SYSTEM_USER
+   global CHECK_OUTPUT CHECK_HOST CHECK_USER CHECK_FIRST_FOREIGN_SYSTEM_USER
 
    get_rqs_list old_rqs
    set old_rqs_count [llength $old_rqs]
@@ -172,6 +172,33 @@ proc qconf_modify_rqs {} {
       set ret [mod_rqs new_rqs_charray "$rqs_name_fast" 1 $non_cluster_host "" 0]
       if {![check_for_non_cluster_host_error $ret "any"]} {
          add_proc_error "qconf_modify_rqs" -1 "qconf -Mrqs should have failed on host $non_cluster_host"
+      }
+   }
+
+   # try to enter duplicate rqs names - they have to be rejected
+   set filename [get_tmp_file_name]
+   set fd [open $filename "w"]
+   puts $fd "{"
+   puts $fd "name $rqs_name_fast"
+   puts $fd "description first instance of $rqs_name_fast"
+   puts $fd "enabled true"
+   puts $fd "limit to slots=10"
+   puts $fd "}"
+   puts $fd "{"
+   puts $fd "name $rqs_name_fast"
+   puts $fd "description second instance of $rqs_name_fast"
+   puts $fd "enabled true"
+   puts $fd "limit to slots=20"
+   puts $fd "}"
+   close $fd
+   set result [start_sge_bin "qconf" "-Mrqs $filename" $CHECK_HOST]
+
+   if {$prg_exit_state == 0} {
+      add_proc_error "qconf_modify_rqs" -1 "qconf should have failed:\n$result"
+   } else {
+      set expected_message [translate_macro MSG_RQS_REQUEST_DUPLICATE_NAME_S $rqs_name_fast]
+      if {[string match "*$expected_message*" $result] == 0} {
+         add_proc_error "qconf_modify_rqs" -1 "qconf should have failed with the error message\n$expected_message\nbut returned\n$result"
       }
    }
 }
