@@ -1,3 +1,6 @@
+JG-2007-04-18-0: Enhancem.: added test for qconf -Mrqs with duplicate rqs names.
+                 Review:    AP, MD, MP, OJ
+
 CR-2007-04-16-0: Enhancem.: added more output for auto_reschedule test when
                             timeout occurs.
                  Review:    RH
